--- a/TestFramework/pom.xml
+++ b/TestFramework/pom.xml
@@ -20,7 +20,7 @@
 		<dependency>
 			<groupId>org.opensourcebim</groupId>
 			<artifactId>bimserver</artifactId>
-			<version>1.5.34-SNAPSHOT</version>
+			<version>1.5.33</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
