--- a/TestFramework/pom.xml
+++ b/TestFramework/pom.xml
@@ -4,7 +4,7 @@
 	<artifactId>TestFramework</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<properties>
-		<exec.mainClass>org.bimserver.test.frameworks.tests.TestAllServer</exec.mainClass>
+		<exec.mainClass>org.bimserver.test.framework.tests.TestAllServer</exec.mainClass>
 	</properties>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
