--- a/TestFramework/pom.xml
+++ b/TestFramework/pom.xml
@@ -22,8 +22,8 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.opensourcebim</groupId>
-			<artifactId>bimserver</artifactId>
-			<version>1.5.33</version>
+			<artifactId>bimserverjar</artifactId>
+			<version>1.5.35-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
