--- a/TestFramework/pom.xml
+++ b/TestFramework/pom.xml
@@ -23,7 +23,7 @@
 		<dependency>
 			<groupId>org.opensourcebim</groupId>
 			<artifactId>bimserverjar</artifactId>
-			<version>1.5.79-SNAPSHOT</version>
+			<version>1.5.78</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
